# fccl

./: .gitignore  README.md
fccl_base/: CMakeLists.txt  package.xml
fccl_base/include/fccl_base/: ConstraintTypes.h  Constraints.h  FeatureTypes.h  Features.h
fccl_base/src/fccl_base/: Constraints.cpp  FeatureTypes.cpp  Features.cpp
fccl_base/test/: Constraints.cpp  Features.cpp
fccl_control/: CMakeLists.txt  package.xml
fccl_control/include/fccl_control/: Features.h  Geometry.h  Hashing.h  InteractionMatrix.h  String.h  Transform.h  Twist.h  Vector.h
fccl_control/src/: Features.cpp  Geometry.cpp  Hashing.cpp  InteractionMatrix.cpp  Transform.cpp  Twist.cpp  Vector.cpp  main.cpp
fccl_control/test/: Features.cpp  Geometry.cpp  InteractionMatrix.cpp  Transform.cpp  Twist.cpp  Vector.cpp
fccl_conversions/: CMakeLists.txt  package.xml
fccl_conversions/include/fccl_conversions/: Conversions.h  JointStateInterpreter.h  YamlParser.h
fccl_conversions/src/fccl_conversions/: Conversions.cpp  JointStateInterpreter.cpp  YamlParser.cpp
fccl_conversions/test/fccl_conversions/: Conversions.cpp  JointStateInterpreter.cpp  YamlParser.cpp
fccl_conversions/test_data/: constraints.yaml  features.yaml
fccl_core/: CMakeLists.txt  package.xml
fccl_core/include/fccl/base/: Array.h  ConstraintArray.h  ConstraintFunctions.h  ConstraintTypes.h  Constraints.h  FeatureTypes.h  Features.h  JointConstraint.h  Policies.h
fccl_core/include/fccl/control/: CartesianConstraintController.h  ConstraintController.h  FSM.h  Gains.h  Interpolator.h  JointController.h  PID.h
fccl_core/include/fccl/estimation/: LimitEstimator.h  StateEstimator.h
fccl_core/include/fccl/kdl/: InteractionMatrix.h  Jacobian.h  JntArray.h  Joint.h  JointArray.h  JointMappingMatrix.h  KinematicChain.h  Robot.h  Semantics.h  Transform.h  Twist.h  Vector.h
fccl_core/include/fccl/semantics/: ConstraintArraySemantics.h  ConstraintSemantics.h  EigenExtension.h  FeatureSemantics.h  InteractionMatrixSemantics.h  JacobianSemantics.h  JntArraySemantics.h  JointMappingSemantics.h  KinematicChainSemantics.h  SemanticsBase.h  TransformSemantics.h  TwistSemantics.h
fccl_core/include/fccl/solvers/: WDLSSolver.h  WeightedSolver.h
fccl_core/include/fccl/utils/: DoubleBuffer.h  Equalities.h  Hashing.h  Printing.h  StatePolicies.h  TransformMap.h
fccl_core/src/fccl/base/: ConstraintFunctions.cpp  Constraints.cpp  FeatureTypes.cpp  Features.cpp
fccl_core/src/fccl/control/: CartesianConstraintController.cpp  ConstraintController.cpp
fccl_core/src/fccl/kdl/: InteractionMatrix.cpp  Jacobian.cpp  JntArray.cpp  JointMappingMatrix.cpp  KinematicChain.cpp  Semantics.cpp  Transform.cpp  Twist.cpp  Vector.cpp
fccl_core/src/fccl/solvers/: WDLSSolver.cpp
fccl_core/src/fccl/utils/: Equalities.cpp  Hashing.cpp  Printing.cpp  TransformMap.cpp
fccl_core/test/: Constraints.cpp  Features.cpp  InteractionMatrix.cpp  InteractionMatrixSemantics.cpp  Jacobian.cpp  JacobianSemantics.cpp  JntArray.cpp  JntArraySemantics.cpp  JointMappingMatrix.cpp  JointMappingSemantics.cpp  KinematicChain.cpp  Semantics.cpp  Transform.cpp  TransformMap.cpp  Twist.cpp  Vector.cpp
fccl_core/test/base/: ConstraintArray.cpp  Constraints.cpp  Features.cpp  JointConstraint.cpp
fccl_core/test/control/: CartesianConstraintController.cpp  ConstraintController.cpp  FSM.cpp  Gains.cpp  Interpolator.cpp  PID.cpp
fccl_core/test/estimation/: LimitEstimator.cpp  StateEstimator.cpp
fccl_core/test/kdl/: InteractionMatrix.cpp  Jacobian.cpp  JntArray.cpp  Joint.cpp  JointArray.cpp  JointMappingMatrix.cpp  KinematicChain.cpp  Transform.cpp  Twist.cpp
fccl_core/test/semantics/: ConstraintSemantics.cpp  FeatureSemantics.cpp  InteractionMatrixSemantics.cpp  JacobianSemantics.cpp  JntArraySemantics.cpp  JointMappingSemantics.cpp  TransformSemantics.cpp  TwistSemantics.cpp
fccl_core/test/solvers/: WeightedSolver.cpp
fccl_core/test/utils/: DoubleBuffer.cpp  Hashing.cpp  TransformMap.cpp
fccl_kdl/: CMakeLists.txt  package.xml
fccl_kdl/include/fccl_kdl/: Hashing.h  InteractionMatrix.h  Transform.h  Twist.h  Vector.h
fccl_kdl/src/fccl_kdl/: Hashing.cpp  InteractionMatrix.cpp  Transform.cpp  Twist.cpp  Vector.cpp
fccl_kdl/test/: InteractionMatrix.cpp  Transform.cpp  Twist.cpp  Vector.cpp
fccl_msgs/: CMakeLists.txt  package.xml
fccl_msgs/action/: SingleArmMotion.action
fccl_msgs/msg/: Constraint.msg  ConstraintFeedback.msg  ConstraintState.msg  Feature.msg  KinematicChain.msg
fccl_nodes/: CMakeLists.txt  package.xml
fccl_nodes/include/fccl_nodes/: CommandPublisher.h  JointStateListener.h  SingleArmController.h  TFWorker.h
fccl_nodes/launch/: pr2_fccl_arm_controllers.launch
fccl_nodes/src/fccl_nodes/: SingleArmController.cpp  SingleArmControllerNode.cpp
fccl_utils/: CMakeLists.txt  package.xml
fccl_utils/include/fccl_utils/: Equalities.h  Hashing.h  Printing.h
fccl_utils/src/fccl_utils/: Equalities.cpp  Hashing.cpp  Printing.cpp
fccl_visualization/: CMakeLists.txt  package.xml
fccl_visualization/scripts/: feature_visualization.py
pr2_pouring_experiments/: CMakeLists.txt  package.xml
pr2_pouring_experiments/config/: pr2_flipping_sim_start_config.yaml  pr2_foto_start_config.yaml  pr2_pouring_sim.rviz  pr2_pouring_sim_start_config.yaml
pr2_pouring_experiments/launch/: pancake_scenario_visualization.launch  pr2_fccl_controllers.launch  pr2_fccl_sim_controllers.launch  pr2_flipping_real.launch  pr2_flipping_real_setup.launch  pr2_flipping_sim.launch  pr2_flipping_sim_setup.launch  pr2_pancake.launch  pr2_pancake_sim.launch  pr2_pouring_sim.launch  pr2_pouring_sim_setup.launch  pr2_simulation.launch  pr2_standard_arm_controllers.launch  sandbox.launch
pr2_pouring_experiments/models/: Coke-Bottle.dae  coke_bottle_model.py  dinner_plate.dae  dinner_plate_model.py  mondamin-pancake-mix.dae  pancake_bottle_model2.py
