<?xml version="1.0"?>
<package>
  <name>fccl_core</name>
  <version>0.0.0</version>
  <description>
     C++ library to build controllers with specifications using feature
     constraints.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <author email="kresse@in.tum.de">Ingo Kresse</author>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/fccl_control</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>reflexxes_type2</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>reflexxes_type2</run_depend>
  <run_depend>control_toolbox</run_depend>

  <test_depend>gtest</test_depend>

</package>
