<?xml version="1.0"?>
<package>
  <name>fccl_nodes</name>
  <version>0.0.0</version>
  <description>ROS nodes using the feature constraints controller library.</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>boost</run_depend>
</package>
