<?xml version="1.0"?>
<package>
  <name>pr2_pouring_experiments</name>
  <version>0.0.0</version>
  <description>
    Collection of launch-files and config-files for to have the PR2 robot
    perform some pouring experiments.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>loopback_controller_manager_samples</run_depend>
  <run_depend>pr2_controller_configuration</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>iai_robot_mechanism_controllers</run_depend>
  <run_depend>fccl_visualization</run_depend>
</package>
